--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ server.port= 8080
 
 
 ### Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url= jdbc:mysql://localhost:3306/startup_kit
+spring.datasource.url= jdbc:mysql://localhost:3306/36Lpsamaj
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.hikari.connectionTimeout=30000
@@ -22,7 +22,7 @@ spring.datasource.initialization-mode=always
 ### Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 
 ### Hibernate Logging
 logging.level.org.hibernate.SQL= DEBUG
