--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,9 +3,9 @@ server.port= 8080
 
 
 ### Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url= jdbc:mysql://localhost:3306/36Lpsamaj
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url= jdbc:mysql://37.59.55.185:3306/rA0srkDaYU
+spring.datasource.username=rA0srkDaYU
+spring.datasource.password=gjNHF91Mb1
 spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.validationTimeout=5000
 spring.datasource.hikari.maximumPoolSize=10
