--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -3,9 +3,9 @@ server.port= 8080
 
 
 ### Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url= jdbc:mysql://192.168.2.65:3306/cattleinsurance
-spring.datasource.username= root
-spring.datasource.password= Xmplify@123
+spring.datasource.url= jdbc:mysql://37.59.55.185:3306/rA0srkDaYU
+spring.datasource.username=rA0srkDaYU
+spring.datasource.password=gjNHF91Mb1
 
 
 ### for initialize default data in database from.sql 
