--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,7 +5,7 @@ server.port= 8284
 ### Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url= jdbc:mysql://localhost:3306/36lpsamaj
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.validationTimeout=5000
 spring.datasource.hikari.maximumPoolSize=10
