--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,7 +5,7 @@ server.port= 8284
 ### Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url= jdbc:mysql://localhost:3306/36lpsamaj
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.validationTimeout=5000
 spring.datasource.hikari.maximumPoolSize=10
@@ -22,7 +22,8 @@ spring.datasource.initialization-mode=always
 ### Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.jdbc.time_zone = UTC
 ### Hibernate Logging
 logging.level.org.hibernate.SQL= DEBUG
 
