--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -22,12 +22,11 @@ spring.datasource.initialization-mode=always
 ### Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.jdbc.time_zone = UTC
 ### Hibernate Logging
 logging.level.org.hibernate.SQL= DEBUG
-
-### App Properties
+### App ProperPties
 # 7 days token validity 
 app.jwtSecret= JWTSuperSecretKey
 app.jwtExpirationInMs = 604800000
