--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ server.port= 8284
 
 
 ### Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url= jdbc:mysql://localhost:3306/36lpsamaj
+spring.datasource.url= jdbc:mysql://localhost:3306/36lpsamaj?useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.hikari.connectionTimeout=30000
